; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/mkuzip/extr_mkuz_zlib.c_mkuz_zlib_compress.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/mkuzip/extr_mkuz_zlib.c_mkuz_zlib_compress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mkuz_blk = type { %struct.TYPE_2__, i32, i64 }
%struct.TYPE_2__ = type { i64 }
%struct.mkuz_zlib = type { i32 }

@Z_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [40 x i8] c"can't compress data: compress2() failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mkuz_zlib_compress(i8* %0, %struct.mkuz_blk* %1, %struct.mkuz_blk* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.mkuz_blk*, align 8
  %6 = alloca %struct.mkuz_blk*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.mkuz_zlib*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.mkuz_blk* %1, %struct.mkuz_blk** %5, align 8
  store %struct.mkuz_blk* %2, %struct.mkuz_blk** %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.mkuz_zlib*
  store %struct.mkuz_zlib* %10, %struct.mkuz_zlib** %8, align 8
  %11 = load %struct.mkuz_blk*, %struct.mkuz_blk** %6, align 8
  %12 = getelementptr inbounds %struct.mkuz_blk, %struct.mkuz_blk* %11, i32 0, i32 2
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %7, align 8
  %14 = load %struct.mkuz_blk*, %struct.mkuz_blk** %6, align 8
  %15 = getelementptr inbounds %struct.mkuz_blk, %struct.mkuz_blk* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.mkuz_blk*, %struct.mkuz_blk** %5, align 8
  %18 = getelementptr inbounds %struct.mkuz_blk, %struct.mkuz_blk* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.mkuz_blk*, %struct.mkuz_blk** %5, align 8
  %21 = getelementptr inbounds %struct.mkuz_blk, %struct.mkuz_blk* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.mkuz_zlib*, %struct.mkuz_zlib** %8, align 8
  %25 = getelementptr inbounds %struct.mkuz_zlib, %struct.mkuz_zlib* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i64 @compress2(i32 %16, i64* %7, i32 %19, i64 %23, i32 %26)
  %28 = load i64, i64* @Z_OK, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %30, label %32

30:                                               ; preds = %3
  %31 = call i32 @errx(i32 1, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  br label %32

32:                                               ; preds = %30, %3
  %33 = load i64, i64* %7, align 8
  %34 = load %struct.mkuz_blk*, %struct.mkuz_blk** %6, align 8
  %35 = getelementptr inbounds %struct.mkuz_blk, %struct.mkuz_blk* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  store i64 %33, i64* %36, align 8
  ret void
}

declare dso_local i64 @compress2(i32, i64*, i32, i64, i32) #1

declare dso_local i32 @errx(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
